test/fail_compilation/fail40.d
struct Qwert {
int[20] yuiop;
int* asdfg = yuiop.ptr;
}

